force-app/main/default/objects/Billing_Row_Data__c/Billing_Row_Data__c.object-meta.xml
<CustomObject>
    <label>Billing Row Data</label>
    <nameField>
        <label>Billing Row Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Row Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>