force-app/main/default/objects/Billing_Row_Data__c/fields/Attendance_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_From_Date__c</fullName>
    <label>Attendance From Date</label>
    <type>Date</type>
</CustomField>