force-app/main/default/objects/Billing_Row_Data__c/fields/Attendance_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_To_Date__c</fullName>
    <label>Attendance To Date</label>
    <type>Date</type>
</CustomField>