force-app/main/default/objects/Billing_Row_Data__c/fields/Charging_Structure__c.field-meta.xml
<CustomField>
    <fullName>Charging_Structure__c</fullName>
    <label>Charging Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Hourly Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>