force-app/main/default/objects/Billing_Row_Data__c/fields/Client_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Ticket_Number__c</fullName>
    <label>Client Ticket Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>