force-app/main/default/objects/Billing_Row_Data__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Row Data</relationshipLabel>
    <relationshipName>Billing_Row_Data</relationshipName>
    <type>Lookup</type>
</CustomField>