force-app/main/default/objects/Billing_Row_Data__c/fields/Engineer_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Visit_Date__c</fullName>
    <label>Engineer Visit Date</label>
    <type>Date</type>
</CustomField>