force-app/main/default/objects/Billing_Row_Data__c/fields/Leaving_Time__c.field-meta.xml
<CustomField>
    <fullName>Leaving_Time__c</fullName>
    <label>Leaving Time</label>
    <type>Time</type>
</CustomField>