force-app/main/default/objects/Billing_Row_Data__c/fields/No_of_Excess_hours_OOH__c.field-meta.xml
<CustomField>
    <fullName>No_of_Excess_hours_OOH__c</fullName>
    <label>No. of Excess hours(OOH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>