force-app/main/default/objects/Billing_Row_Data__c/fields/No_of_Public_Holiday_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Public_Holiday_Days__c</fullName>
    <label>No. of Public Holiday Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>