force-app/main/default/objects/Billing_Row_Data__c/fields/NO_of_TOT__c.field-meta.xml
<CustomField>
    <fullName>NO_of_TOT__c</fullName>
    <label>NO. of TOT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>