force-app/main/default/objects/Billing_Row_Data__c/fields/No_of_Weekend_Hours__c.field-meta.xml
<CustomField>
    <fullName>No_of_Weekend_Hours__c</fullName>
    <label>No. of Weekend Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>