force-app/main/default/objects/Billing_Row_Data__c/fields/Number_of_Fulldays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Fulldays__c</fullName>
    <label>Number of  Fulldays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>