force-app/main/default/objects/Billing_Row_Data__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <label>Primary Location</label>
    <length>18</length>
    <type>Text</type>
</CustomField>