force-app/main/default/objects/Billing_Row_Data__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Billing Row Data</relationshipLabel>
    <relationshipName>Billing_Row_Data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>