force-app/main/default/objects/Billing_Row_Data__c/fields/Resolution_SLA__c.field-meta.xml
<CustomField>
    <fullName>Resolution_SLA__c</fullName>
    <label>Resolution SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>