force-app/main/default/objects/Billing_Row_Data__c/fields/Responce_SLA__c.field-meta.xml
<CustomField>
    <fullName>Responce_SLA__c</fullName>
    <label>Responce SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>