force-app/main/default/objects/Billing_Row_Data__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Project_Services__c</referenceTo>
    <relationshipLabel>Billing Row Data</relationshipLabel>
    <relationshipName>Billing_Row_Data</relationshipName>
    <type>Lookup</type>
</CustomField>