force-app/main/default/objects/Billing_Row_Data__c/fields/Severity_Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Priority_Level__c</fullName>
    <label>Severity/Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>