force-app/main/default/objects/Billing_Row_Data__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Project_Sites__c</referenceTo>
    <relationshipLabel>Billing Row Data</relationshipLabel>
    <relationshipName>Billing_Row_Data</relationshipName>
    <type>Lookup</type>
</CustomField>