force-app/main/default/objects/Billing_Row_Data__c/fields/Ticket_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Created_Date_Time__c</fullName>
    <label>Ticket Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>