force-app/main/default/objects/Billing_Row_Data__c/fields/Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status__c</fullName>
    <label>Ticket Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>