force-app/main/default/objects/Billing_Row_Data__c/fields/TIG_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>TIG_Ticket_Number__c</fullName>
    <label>TIG Ticket Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>