force-app/main/default/objects/Billing_Row_Data__c/fields/Total_Hours_Spent_On_Visit_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Spent_On_Visit_Ticket__c</fullName>
    <label>Total Hours Spent On Visit/Ticket</label>
    <type>Time</type>
</CustomField>