force-app/main/default/objects/Billing_Row_Data__c/fields/Work_End__c.field-meta.xml
<CustomField>
    <fullName>Work_End__c</fullName>
    <label>Work End</label>
    <type>Time</type>
</CustomField>