force-app/main/default/objects/Billing_Row_Data__c/recordTypes/Tickets.recordType-meta.xml
<RecordType>
    <fullName>Tickets</fullName>
    <active>true</active>
    <label>Tickets</label>
</RecordType>