force-app/main/default/objects/Billing_Row_Data__c/recordTypes/TimeSheet.recordType-meta.xml
<RecordType>
    <fullName>TimeSheet</fullName>
    <active>true</active>
    <label>TimeSheet</label>
</RecordType>